# prediction-market

./: .gitignore  README.md
01-Project/: .env.example  .gitignore  Makefile  README.md  deepseek_test.yaml  llm5_open.yaml  market  pyproject.toml
01-Project/.github/workflows/: ci.yml
01-Project/archive/: demo_llm.yaml
01-Project/docs/: architecture.md
01-Project/eval_runs/: summary.json  trials.jsonl
01-Project/eval_runs/gemini-3.5-flash/: trials.jsonl
01-Project/experiments/: quickstart.py
01-Project/market_sim/: __init__.py
01-Project/market_sim/agents/: __init__.py  base.py  llm_agent.py  scripted.py
01-Project/market_sim/cli/: __init__.py  main.py
01-Project/market_sim/commands/: __init__.py  agent_api.py  handlers.py  session.py
01-Project/market_sim/engine/: __init__.py  book.py  exchange.py  ledger.py  models.py  settlement.py
01-Project/market_sim/eval/: __init__.py  provider.py  run_eval.py
01-Project/market_sim/llm/: __init__.py  base.py  gemini.py  openai_compat.py
01-Project/market_sim/runner/: __init__.py  builder.py  config.py  events.py  replay.py  simulation.py  sinks.py
01-Project/market_sim/server/: __init__.py  __main__.py  app.py  protocol.py  session.py
01-Project/market_sim/web/: __main__.py  app.py  protocol.py  session.py
01-Project/runs/: demo.jsonl  demo.session.pkl  demo5.jsonl  demo_agentic.jsonl  demo_llm.jsonl
01-Project/runs/demo/: 2026-06-08_232114.jsonl  2026-06-08_232114.session.pkl  2026-06-09_011958.jsonl  2026-06-12_104535.jsonl
01-Project/runs/demo5/: 2026-06-08_232808.jsonl  2026-06-08_232808.session.pkl  2026-06-08_235636.jsonl  2026-06-08_235636.session.pkl  2026-06-09_010328.jsonl  2026-06-09_010328.session.pkl  2026-06-09_090745.jsonl  2026-06-09_090745.session.pkl  2026-06-09_092654.jsonl  2026-06-09_092654.session.pkl  2026-06-09_093647.jsonl  2026-06-09_093647.session.pkl  2026-06-09_101916.jsonl  2026-06-09_101916.session.pkl  2026-06-09_105811.jsonl  2026-06-09_105811.session.pkl  (+8 more)
01-Project/scenarios/: demo.yaml  demo5.yaml  llm5_only.yaml  llm5_orders.yaml
01-Project/scripts/: run_demo5_5rounds.py
01-Project/tests/: test_acceptance.py  test_agent_api.py  test_builder.py  test_engine.py  test_eval.py  test_open_features.py  test_order_types.py  test_providers.py  test_refactor.py  test_runner.py  test_web.py
01-Project/web/: index.html  package.json  vite.config.ts
04-eval/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
04-eval/gms_eval/: __init__.py  base.py  gemini_client.py  metrics.py  probes.py  run_eval.py  scenarios.py  schema.py  scorecard.py
04-eval/tests/: test_eval.py
(+52 files in other folders)
