[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generative-market-simulation"
version = "0.1.0"
description = "Generative Market Simulation — a prediction-market engine, CLI, and LLM-agent simulation."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "sortedcontainers>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
]
llm = [
    "google-genai>=1.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
market = "market_sim.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["market_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
